Domain Transfers: fixes spacing for FAQ section.

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@@ -376,8 +376,7 @@
 			}
 			ul {
 				list-style: none;
-				margin-bottom: 48px;
-				margin: 0;
+				margin: 0 0 48px 0;
 			}
 		}
 
